cabal-version:       2.4

name:                glam
version:             0.0
synopsis:            The guarded λ-calculus
description:
  A simple implementation of Clouston, Bizjak, Bugge and Birkedal's guarded λ-calculus.
homepage:            https://git.monade.li/glam
license:             ISC
license-file:        LICENSE
author:              Naïm Favier
maintainer:          n@monade.li
category:            Compilers/Interpreters

source-repository head
  type:              git
  location:          https://git.monade.li/glam

common glam
  build-depends:
    base^>=4.14.0.0,
    containers,
    megaparsec,
    parser-combinators,
    haskeline
  hs-source-dirs:      src
  default-language:    Haskell2010

library
  import: glam
  exposed-modules:
    Glam.Term
    Glam.Type
    Glam.Parse

executable glam
  import: glam
  main-is: Main.hs
  other-modules:
    Glam.Term
    Glam.Type
    Glam.Parse
