cabal-version:       2.4

name:                glam
version:             0.0
synopsis:            The guarded λ-calculus
description:
  A simple implementation of Clouston, Bizjak, Bugge and Birkedal's guarded λ-calculus.
homepage:            https://git.monade.li/glam
license:             ISC
license-file:        LICENSE
author:              Naïm Favier
maintainer:          n@monade.li
category:            Compilers/Interpreters

source-repository head
  type:              git
  location:          https://git.monade.li/glam

common glam
  build-depends:
    base >= 4.12.0.0,
    containers,
    mtl,
    megaparsec,
    parser-combinators,
    lens
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:
    NamedFieldPuns
    BlockArguments
    LambdaCase
    MultiWayIf
    ViewPatterns
    PatternSynonyms
    ApplicativeDo
    OverloadedStrings
    PostfixOperators
    FlexibleContexts
    ConstraintKinds
    NoMonomorphismRestriction
  ghc-options:         -Wunused-matches
  ghcjs-options:       -dedupe

library
  import: glam
  exposed-modules:
    Glam.Term
    Glam.Type
    Glam.Parser
    Glam.Interpreter
    Glam.Inference

executable glam
  import: glam
  if impl(ghcjs)
    main-is: MainJS.hs
    build-depends:
      ghcjs-base
  else
    main-is: Main.hs
    build-depends:
      haskeline,
      monad-loops
  other-modules:
    Glam.Term
    Glam.Type
    Glam.Parser
    Glam.Interpreter
    Glam.Inference
