cabal-version:       2.4

name:                glam
version:             0.0
synopsis:            The guarded λ-calculus
description:
  An implementation of Clouston, Bizjak, Bugge and Birkedal's guarded λ-calculus.
homepage:            https://github.com/ncfavier/glam
license:             ISC
license-file:        LICENSE
author:              Naïm Favier
maintainer:          n@monade.li
category:            Compilers/Interpreters

source-repository head
  type:              git
  location:          https://github.com/ncfavier/glam

executable glam
  build-depends:
    base >= 4.12.0.0 && < 5,
    containers,
    mtl,
    megaparsec,
    parser-combinators,
    lens
  other-modules:
    Glam.Term
    Glam.Type
    Glam.Parser
    Glam.Interpreter
    Glam.Inference
  default-language:    Haskell2010
  default-extensions:
    NamedFieldPuns
    BlockArguments
    LambdaCase
    MultiWayIf
    ViewPatterns
    PatternSynonyms
    ApplicativeDo
    OverloadedStrings
    PostfixOperators
    FlexibleContexts
    ConstraintKinds
    NoMonomorphismRestriction
    ImportQualifiedPost
  ghc-options:         -W
  ghcjs-options:       -dedupe

  if impl(ghcjs)
    main-is: MainJS.hs
    cpp-options: -DGHCJS_BROWSER
    build-depends:
      ghcjs-base
  else
    main-is: Main.hs
    build-depends:
      haskeline,
      monad-loops
