cabal-version:       2.4

name:                glam
version:             0.0
synopsis:            Polymorphic guarded λ-calculus
description:
  An implementation of Clouston, Bizjak, Bugge and Birkedal's guarded λ-calculus with rank-1 polymorphism and automatic boxing.
homepage:            https://github.com/ncfavier/glam
license:             ISC
license-file:        LICENSE
author:              Naïm Favier
maintainer:          n@monade.li
category:            Compilers/Interpreters

source-repository head
  type:              git
  location:          https://github.com/ncfavier/glam

executable glam
  build-depends:
    base >= 4.12.0.0 && < 5,
    containers,
    transformers,
    mtl,
    megaparsec,
    parser-combinators,
    lens
  other-modules:
    Glam.Utils
    Glam.Term
    Glam.Type
    Glam.Rules.Term
    Glam.Rules.Type
    Glam.Run
  default-language:    Haskell2010
  default-extensions:
    NamedFieldPuns
    BlockArguments
    LambdaCase
    MultiWayIf
    ViewPatterns
    PatternSynonyms
    ApplicativeDo
    OverloadedStrings
    PostfixOperators
    FlexibleContexts
    ConstraintKinds
    NoMonomorphismRestriction
    ImportQualifiedPost
    TupleSections
  ghc-options:         -W

  if arch(javascript)
    main-is: MainJS.hs
    cpp-options: -DGHCJS_BROWSER
    -- https://gitlab.haskell.org/ghc/ghc/-/merge_requests/14362
    ld-options: -sEXPORTED_RUNTIME_METHODS=HEAP8,HEAPU8
  else
    main-is: Main.hs
    build-depends:
      haskeline,
      monad-loops
